add kuesioner & admin page

--- a/pages/admin/index.html
+++ b/pages/admin/index.html
@@ -18,20 +18,26 @@
 
     <title>Kuesioner</title>
 
-    <link href="/assets/images/favicon/favicon.ico" rel="icon" />
+    <link href="../../assets/images/favicon/favicon.ico" rel="icon" />
     <link
-      href="/assets/images/favicon/apple-touch-icon.png"
+      href="../../assets/images/favicon/apple-touch-icon.png"
       rel="apple-touch-icon"
     />
 
-    <link rel="stylesheet" href="/assets/styles/main.css" />
-    <link href="/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet" />
-    <link href="/vendor/aos/aos.css" rel="stylesheet" />
-    <link href="/vendor/glightbox/css/glightbox.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="../../assets/styles/main.css" />
+    <link
+      href="../../vendor/bootstrap-icons/bootstrap-icons.css"
+      rel="stylesheet"
+    />
+    <link href="../../vendor/aos/aos.css" rel="stylesheet" />
+    <link
+      href="../../vendor/glightbox/css/glightbox.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- Navbar -->
-    <header class="navbar-container sticky-top" data-aos="fade-down">
+    <header class="navbar-container sticky-top">
       <nav class="navbar navbar-expand-md bg-body-tertiary">
         <div class="container-fluid">
           <button
@@ -51,15 +57,23 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" href="index.html">Beranda</a>
+                <a class="nav-link active" href="./index.html">Beranda</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="tentang-kami.html">Tentang Kami</a>
+                <a class="nav-link" href="./hasil-kuesioner.html"
+                  >Hasil Kuesioner</a
+                >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="login.html">Login Admin</a>
+                <a class="nav-link" href="./pengujian.html">Pengujian</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./tentang-kami.html">Tentang Kami</a>
               </li>
             </ul>
+            <div class="text-center btn-logout">
+              <a href="../../index.html" class="btn btn-secondary">Keluar</a>
+            </div>
           </div>
         </div>
       </nav>
@@ -69,19 +83,17 @@
       <section id="hero" class="hero section-bg">
         <div class="content" data-aos="fade-up">
           <h1 class="title">PENILAIAN TINGKAT KEPUASAN PASIEN RSUD AROSUKA</h1>
-          <a href="./pages/kuesioner/biodata.html" class="btn btn-primary"
-            >Mulai</a
-          >
+          <a href="../kuesioner/biodata.html" class="btn btn-primary">Mulai</a>
         </div>
         <div class="card-slider">
           <a
             class="glightbox"
-            href="/assets/images/background-rs-bundar.png"
+            href="../../assets/images/background-rs-bundar.png"
             type="image"
             slideEffect="slide"
           >
             <img
-              src="/assets/images/background-rs-bundar.png"
+              src="../../assets/images/background-rs-bundar.png"
               alt="Rumah sakit"
               class="image-container"
           /></a>
@@ -91,12 +103,12 @@
 
     <!-- Vendor JS Files -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="/vendor/bootstrap-5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/vendor/aos/aos.js"></script>
-    <script src="/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="/vendor/purecounter/purecounter_vanilla.js"></script>
+    <script src="../../vendor/bootstrap-5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../../vendor/aos/aos.js"></script>
+    <script src="../../vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="../../vendor/purecounter/purecounter_vanilla.js"></script>
 
-    <script src="/assets/scripts/navbar.js"></script>
-    <script src="/assets/scripts/main.js"></script>
+    <script src="../../assets/scripts/navbar.js"></script>
+    <script src="../../assets/scripts/main.js"></script>
   </body>
 </html>
