--- a/login.html
+++ b/login.html
@@ -18,17 +18,18 @@
 
     <title>Login - Kuesioner</title>
 
-    <link href="/images/favicon/favicon.ico" rel="icon" />
-    <link href="/images/favicon/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link href="/assets/images/favicon/favicon.ico" rel="icon" />
+    <link
+      href="/assets/images/favicon/apple-touch-icon.png"
+      rel="apple-touch-icon"
+    />
 
-    <link rel="stylesheet" href="styles/main.css" />
+    <link rel="stylesheet" href="assets/styles/main.css" />
     <link href="/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet" />
     <link href="/vendor/aos/aos.css" rel="stylesheet" />
     <link href="/vendor/glightbox/css/glightbox.min.css" rel="stylesheet" />
-    <link href="/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
   </head>
   <body>
-    <!-- Navbar -->
     <!-- Navbar -->
     <header class="navbar-container sticky-top">
       <nav class="navbar navbar-expand-md bg-body-tertiary">
@@ -50,15 +51,13 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html"
-                  >Beranda</a
-                >
+                <a class="nav-link" href="index.html">Beranda</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Tentang Kami</a>
+                <a class="nav-link" href="tentang-kami.html">Tentang Kami</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="login.html">Login Admin</a>
+                <a class="nav-link active" href="login.html">Login Admin</a>
               </li>
             </ul>
           </div>
@@ -68,9 +67,9 @@
 
     <main>
       <section id="login" class="login section-bg">
-        <div class="content">
+        <div class="content" data-aos="fade-up">
           <div class="row">
-            <form>
+            <form action="/pages/admin/index.html">
               <div class="col-12 col-lg-8">
                 <div class="form-group">
                   <label for="username">Username</label>
@@ -80,6 +79,7 @@
                     id="username"
                     aria-describedby="username"
                     placeholder="Silahkan Masukkan username anda"
+                    required
                   />
                 </div>
                 <div class="form-group">
@@ -89,6 +89,7 @@
                     class="form-control"
                     id="password"
                     placeholder="Silahkan Masukkan Katasandi anda"
+                    required
                   />
                 </div>
               </div>
@@ -104,12 +105,12 @@
         <div class="card-slider">
           <a
             class="glightbox"
-            href="/images/background-rs-bundar.png"
+            href="/assets/images/background-rs-bundar.png"
             type="image"
             slideEffect="slide"
           >
             <img
-              src="/images/background-rs-bundar.png"
+              src="/assets/images/background-rs-bundar.png"
               alt="Rumah sakit"
               class="image-container"
           /></a>
@@ -123,10 +124,8 @@
     <script src="/vendor/aos/aos.js"></script>
     <script src="/vendor/glightbox/js/glightbox.min.js"></script>
     <script src="/vendor/purecounter/purecounter_vanilla.js"></script>
-    <script src="/vendor/swiper/swiper-bundle.min.js"></script>
 
-    <script src="/scripts/navbar.js"></script>
-    <script src="/scripts/main.js"></script>
-    <script src="/scripts/swipper.js"></script>
+    <script src="/assets/scripts/navbar.js"></script>
+    <script src="/assets/scripts/main.js"></script>
   </body>
 </html>
