--- a/tentang-kami.html
+++ b/tentang-kami.html
@@ -16,7 +16,7 @@
     <meta name="robots" content="index, follow" />
     <meta name="language" content="Indonesia" />
 
-    <title>Kuesioner</title>
+    <title>Tentang Kami - Kuesioner</title>
 
     <link href="/assets/images/favicon/favicon.ico" rel="icon" />
     <link
@@ -31,7 +31,7 @@
   </head>
   <body>
     <!-- Navbar -->
-    <header class="navbar-container sticky-top" data-aos="fade-down">
+    <header class="navbar-container sticky-top">
       <nav class="navbar navbar-expand-md bg-body-tertiary">
         <div class="container-fluid">
           <button
@@ -51,10 +51,12 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" href="index.html">Beranda</a>
+                <a class="nav-link" href="index.html">Beranda</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="tentang-kami.html">Tentang Kami</a>
+                <a class="nav-link active" href="tentang-kami.html"
+                  >Tentang Kami</a
+                >
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="login.html">Login Admin</a>
@@ -68,10 +70,15 @@
     <main>
       <section id="hero" class="hero section-bg">
         <div class="content" data-aos="fade-up">
-          <h1 class="title">PENILAIAN TINGKAT KEPUASAN PASIEN RSUD AROSUKA</h1>
-          <a href="./pages/kuesioner/biodata.html" class="btn btn-primary"
-            >Mulai</a
-          >
+          <h2 class="title">RSUD AROSUKA</h2>
+          <p class="text-content mb-5 col-12 col-lg-8">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem non
+            excepturi obcaecati vitae, et animi dolor molestias blanditiis,
+            omnis iste in rerum velit? <br />
+            Odit nulla perferendis hic, voluptas libero molestiae labore
+            veritatis minus aut. Explicabo nihil illo excepturi dolorem labore
+            commodi, vel soluta placeat adipisci magni et saepe, alias aliquam.
+          </p>
         </div>
         <div class="card-slider">
           <a
