finish add question page

--- a/pages/admin/hasil-kuesioner.html
+++ b/pages/admin/hasil-kuesioner.html
@@ -128,7 +128,7 @@
                   data-aos="fade-up"
                   data-aos-delay="300"
                 >
-                  <a href="">
+                  <a href="./print/responden-tidak-puas.html">
                     <div class="card">
                       <div class="card-body">
                         <span
@@ -147,7 +147,7 @@
                   data-aos="fade-up"
                   data-aos-delay="400"
                 >
-                  <a href="">
+                  <a href="./print/responden-terdaftar.html">
                     <div class="card">
                       <div class="card-body">
                         <span
@@ -166,7 +166,7 @@
                   data-aos="fade-up"
                   data-aos-delay="500"
                 >
-                  <a href="">
+                  <a href="./print/responden-laki-laki.html">
                     <div class="card">
                       <div class="card-body">
                         <span
@@ -185,7 +185,7 @@
                   data-aos="fade-up"
                   data-aos-delay="600"
                 >
-                  <a href="">
+                  <a href="./print/responden-perempuan.html">
                     <div class="card">
                       <div class="card-body">
                         <span
