--- a/pages/admin/print/responden-terdaftar.html
+++ b/pages/admin/print/responden-terdaftar.html
@@ -39,7 +39,9 @@
     <main>
       <section id="print" class="print">
         <div class="content" data-aos="fade-up">
-          <h2 class="title">Total Responden Pasien Puas di RSUD Arosuka</h2>
+          <h2 class="title">
+            Total Responden Pasien Terdaftar di RSUD Arosuka
+          </h2>
 
           <div class="table-responsive">
             <div class="form-group pull-right d-flex justify-content-end">
@@ -53,18 +55,13 @@
             <table class="table table-hover table-bordered results">
               <thead>
                 <tr>
-                  <th rowspan="2">#</th>
-                  <th rowspan="2" class="col-md-2 col-xs-2">Nama Lengkap</th>
-                  <th colspan="6" class="col-md-8 col-xs-8">Pertanyaan</th>
-                  <th rowspan="2" class="col-md-2 col-xs-2">Kepuasan</th>
-                </tr>
-                <tr>
-                  <th>1</th>
-                  <th>2</th>
-                  <th>3</th>
-                  <th>4</th>
-                  <th>5</th>
-                  <th>6</th>
+                  <th>#</th>
+                  <th class="col-md-2 col-xs-2">Nama Lengkap</th>
+                  <th class="col-md-2 col-xs-2">Email</th>
+                  <th class="col-md-2 col-xs-2">Pekerjaan</th>
+                  <th class="col-md-1 col-xs-1">Umur</th>
+                  <th class="col-md-1 col-xs-1">Jenis Kelamin</th>
+                  <th class="col-md-4 col-xs-4">Alamat</th>
                 </tr>
                 <tr class="warning no-result">
                   <td colspan="4">
@@ -76,69 +73,45 @@
                 <tr>
                   <th scope="row">1</th>
                   <td class="col-md-2 col-xs-2">Alif Suryadai</td>
-                  <td>80</td>
-                  <td>90</td>
-                  <td>85</td>
-                  <td>100</td>
-                  <td>75</td>
-                  <td>95</td>
-                  <td class="col-md-2 col-xs-2">Puas</td>
+                  <td class="col-md-2 col-xs-2">alifsuryadi@info.com</td>
+                  <td class="col-md-2 col-xs-2">Full-Stack Developer</td>
+                  <td class="col-md-1 col-xs-1">21</td>
+                  <td class="col-md-1 col-xs-1">Laki-laki</td>
+                  <td class="col-md-4 col-xs-4">Lubuk begalung, Kota Padang</td>
                 </tr>
 
                 <tr>
                   <th scope="row">2</th>
                   <td class="col-md-2 col-xs-2">John Doe</td>
-                  <td>80</td>
-                  <td>90</td>
-                  <td>85</td>
-                  <td>100</td>
-                  <td>75</td>
-                  <td>95</td>
-                  <td class="col-md-2 col-xs-2">Puas</td>
+                  <td class="col-md-2 col-xs-2">johndoe@gmail.com</td>
+                  <td class="col-md-2 col-xs-2">Guru</td>
+                  <td class="col-md-1 col-xs-1">35</td>
+                  <td class="col-md-1 col-xs-1">Laki-laki</td>
+                  <td class="col-md-4 col-xs-4">
+                    Jl. Merdeka No. 123, Kota Medan, Sumatera Utara
+                  </td>
                 </tr>
                 <tr>
                   <th scope="row">3</th>
                   <td class="col-md-2 col-xs-2">Jane Smith</td>
-                  <td>80</td>
-                  <td>90</td>
-                  <td>85</td>
-                  <td>100</td>
-                  <td>100</td>
-                  <td>100</td>
-                  <td class="col-md-2 col-xs-2">Puas</td>
+                  <td class="col-md-2 col-xs-2">janesmith@gmail.com</td>
+                  <td class="col-md-2 col-xs-2">Dokter</td>
+                  <td class="col-md-1 col-xs-1">42</td>
+                  <td class="col-md-1 col-xs-1">Perempuan</td>
+                  <td class="col-md-4 col-xs-4">
+                    Jl. Cendana No. 45, Kota Pariaman, Sumatera Barat
+                  </td>
                 </tr>
                 <tr>
                   <th scope="row">4</th>
                   <td class="col-md-2 col-xs-2">Michael Johnson</td>
-                  <td>90</td>
-                  <td>90</td>
-                  <td>100</td>
-                  <td>80</td>
-                  <td>75</td>
-                  <td>95</td>
-                  <td class="col-md-2 col-xs-2">Puas</td>
-                </tr>
-                <tr>
-                  <th scope="row">5</th>
-                  <td class="col-md-2 col-xs-2">Sarah Lee</td>
-                  <td>80</td>
-                  <td>80</td>
-                  <td>85</td>
-                  <td>70</td>
-                  <td>75</td>
-                  <td>95</td>
-                  <td class="col-md-2 col-xs-2">Puas</td>
-                </tr>
-                <tr>
-                  <th scope="row">6</th>
-                  <td class="col-md-2 col-xs-2">David Brown</td>
-                  <td>80</td>
-                  <td>90</td>
-                  <td>85</td>
-                  <td>90</td>
-                  <td>90</td>
-                  <td>80</td>
-                  <td class="col-md-2 col-xs-2">Puas</td>
+                  <td class="col-md-2 col-xs-2">michaeljohnson@gmail.com</td>
+                  <td class="col-md-2 col-xs-2">Wiraswasta</td>
+                  <td class="col-md-1 col-xs-1">28</td>
+                  <td class="col-md-1 col-xs-1">Laki-laki</td>
+                  <td class="col-md-4 col-xs-4">
+                    Jl. Anggrek No. 67, Kota Bukittinggi, Sumatera Barat
+                  </td>
                 </tr>
               </tbody>
             </table>
