--- a/pages/admin/print/total-responden.html
+++ b/pages/admin/print/total-responden.html
@@ -16,7 +16,7 @@
     <meta name="robots" content="index, follow" />
     <meta name="language" content="Indonesia" />
 
-    <title>Kuesioner</title>
+    <title>Hasil - Kuesioner</title>
 
     <link href="../../../assets/images/favicon/favicon.ico" rel="icon" />
     <link
@@ -39,7 +39,7 @@
     <main>
       <section id="print" class="print">
         <div class="content" data-aos="fade-up">
-          <h2 class="title">Total Responden Pasien RSUD Arosuka</h2>
+          <h2 class="title">Total Responden Pasien di RSUD Arosuka</h2>
 
           <div class="table-responsive">
             <div class="form-group pull-right d-flex justify-content-end">
