--- a/pages/admin/print/responden-laki-laki.html
+++ b/pages/admin/print/responden-laki-laki.html
@@ -39,7 +39,9 @@
     <main>
       <section id="print" class="print">
         <div class="content" data-aos="fade-up">
-          <h2 class="title">Total Responden Pasien Puas di RSUD Arosuka</h2>
+          <h2 class="title">
+            Total Responden Pasien Laki-laki di RSUD Arosuka
+          </h2>
 
           <div class="table-responsive">
             <div class="form-group pull-right d-flex justify-content-end">
@@ -75,7 +77,7 @@
               <tbody>
                 <tr>
                   <th scope="row">1</th>
-                  <td class="col-md-2 col-xs-2">Alif Suryadai</td>
+                  <td class="col-md-2 col-xs-2">Alif Suryadi</td>
                   <td>80</td>
                   <td>90</td>
                   <td>85</td>
@@ -88,13 +90,13 @@
                 <tr>
                   <th scope="row">2</th>
                   <td class="col-md-2 col-xs-2">John Doe</td>
-                  <td>80</td>
-                  <td>90</td>
-                  <td>85</td>
-                  <td>100</td>
+                  <td>20</td>
+                  <td>40</td>
+                  <td>45</td>
+                  <td>50</td>
                   <td>75</td>
-                  <td>95</td>
-                  <td class="col-md-2 col-xs-2">Puas</td>
+                  <td>75</td>
+                  <td class="col-md-2 col-xs-2">Tidak Puas</td>
                 </tr>
                 <tr>
                   <th scope="row">3</th>
@@ -119,26 +121,15 @@
                   <td class="col-md-2 col-xs-2">Puas</td>
                 </tr>
                 <tr>
-                  <th scope="row">5</th>
-                  <td class="col-md-2 col-xs-2">Sarah Lee</td>
-                  <td>80</td>
-                  <td>80</td>
-                  <td>85</td>
-                  <td>70</td>
-                  <td>75</td>
-                  <td>95</td>
-                  <td class="col-md-2 col-xs-2">Puas</td>
-                </tr>
-                <tr>
                   <th scope="row">6</th>
                   <td class="col-md-2 col-xs-2">David Brown</td>
                   <td>80</td>
-                  <td>90</td>
-                  <td>85</td>
-                  <td>90</td>
-                  <td>90</td>
-                  <td>80</td>
-                  <td class="col-md-2 col-xs-2">Puas</td>
+                  <td>70</td>
+                  <td>45</td>
+                  <td>50</td>
+                  <td>40</td>
+                  <td>40</td>
+                  <td class="col-md-2 col-xs-2">Tidak Puas</td>
                 </tr>
               </tbody>
             </table>
