--- a/pages/admin/print/responden-tidak-puas.html
+++ b/pages/admin/print/responden-tidak-puas.html
@@ -6,12 +6,12 @@
     <meta name="author" content="Lara" />
     <meta
       name="description"
-      content="Web Kuesioner Penilaian Tingkat Kepuasan Pasien 
+      content="Web Kuesioner Penilaian Tingkat KeTidak Puasan Pasien 
       RSUD Arosuka"
     />
     <meta
       name="keywords"
-      content="keusioner, naive bayes, penilaian kepuasan"
+      content="keusioner, naive bayes, penilaian keTidak Puasan"
     />
     <meta name="robots" content="index, follow" />
     <meta name="language" content="Indonesia" />
@@ -39,7 +39,9 @@
     <main>
       <section id="print" class="print">
         <div class="content" data-aos="fade-up">
-          <h2 class="title">Total Responden Pasien Puas di RSUD Arosuka</h2>
+          <h2 class="title">
+            Total Responden Pasien Tidak Puas di RSUD Arosuka
+          </h2>
 
           <div class="table-responsive">
             <div class="form-group pull-right d-flex justify-content-end">
@@ -76,69 +78,69 @@
                 <tr>
                   <th scope="row">1</th>
                   <td class="col-md-2 col-xs-2">Alif Suryadai</td>
-                  <td>80</td>
-                  <td>90</td>
+                  <td>40</td>
+                  <td>50</td>
                   <td>85</td>
-                  <td>100</td>
+                  <td>60</td>
                   <td>75</td>
-                  <td>95</td>
-                  <td class="col-md-2 col-xs-2">Puas</td>
+                  <td>45</td>
+                  <td class="col-md-2 col-xs-2">Tidak Puas</td>
                 </tr>
 
                 <tr>
                   <th scope="row">2</th>
                   <td class="col-md-2 col-xs-2">John Doe</td>
-                  <td>80</td>
-                  <td>90</td>
+                  <td>40</td>
+                  <td>50</td>
                   <td>85</td>
-                  <td>100</td>
+                  <td>60</td>
                   <td>75</td>
-                  <td>95</td>
-                  <td class="col-md-2 col-xs-2">Puas</td>
+                  <td>45</td>
+                  <td class="col-md-2 col-xs-2">Tidak Puas</td>
                 </tr>
                 <tr>
                   <th scope="row">3</th>
                   <td class="col-md-2 col-xs-2">Jane Smith</td>
-                  <td>80</td>
-                  <td>90</td>
+                  <td>40</td>
+                  <td>50</td>
                   <td>85</td>
-                  <td>100</td>
-                  <td>100</td>
-                  <td>100</td>
-                  <td class="col-md-2 col-xs-2">Puas</td>
+                  <td>60</td>
+                  <td>60</td>
+                  <td>60</td>
+                  <td class="col-md-2 col-xs-2">Tidak Puas</td>
                 </tr>
                 <tr>
                   <th scope="row">4</th>
                   <td class="col-md-2 col-xs-2">Michael Johnson</td>
-                  <td>90</td>
-                  <td>90</td>
-                  <td>100</td>
-                  <td>80</td>
+                  <td>50</td>
+                  <td>50</td>
+                  <td>60</td>
+                  <td>40</td>
                   <td>75</td>
-                  <td>95</td>
-                  <td class="col-md-2 col-xs-2">Puas</td>
+                  <td>45</td>
+                  <td class="col-md-2 col-xs-2">Tidak Puas</td>
                 </tr>
                 <tr>
                   <th scope="row">5</th>
                   <td class="col-md-2 col-xs-2">Sarah Lee</td>
-                  <td>80</td>
-                  <td>80</td>
+                  <td>40</td>
+                  <td>40</td>
                   <td>85</td>
                   <td>70</td>
                   <td>75</td>
-                  <td>95</td>
-                  <td class="col-md-2 col-xs-2">Puas</td>
+                  <td>45</td>
+                  <td class="col-md-2 col-xs-2">Tidak Puas</td>
                 </tr>
                 <tr>
                   <th scope="row">6</th>
                   <td class="col-md-2 col-xs-2">David Brown</td>
-                  <td>80</td>
-                  <td>90</td>
+                  <td>40</td>
+                  <td>50</td>
                   <td>85</td>
-                  <td>90</td>
-                  <td>90</td>
-                  <td>80</td>
-                  <td class="col-md-2 col-xs-2">Puas</td>
+                  <td>50</td>
+                  <td>50</td>
+                  <td>40</td>
+                  <td class="col-md-2 col-xs-2">Tidak Puas</td>
                 </tr>
               </tbody>
             </table>
