--- a/pages/kuesioner/pertanyaan.html
+++ b/pages/kuesioner/pertanyaan.html
@@ -233,7 +233,9 @@
                       <br />
                     </div>
 
-                    <p class="finish">Jika anda mengerti, silahkan lanjutkan</p>
+                    <p class="finish">
+                      Jika sudah diisi dengar benar, silahkan lanjutkan
+                    </p>
                   </div>
 
                   <div class="button">
@@ -270,5 +272,14 @@
     <script src="../../assets/scripts/main.js"></script>
     <script src="../../assets/scripts/kuesioner.js"></script>
     <script src="../../assets/scripts/pertanyaan.js"></script>
+    <script>
+      document
+        .getElementById("next")
+        .addEventListener("click", function (event) {
+          event.preventDefault();
+
+          document.querySelector("form").submit();
+        });
+    </script>
   </body>
 </html>
