replace the lorem text to the original content

--- a/pages/admin/pertanyaan/edit-pertanyaan.html
+++ b/pages/admin/pertanyaan/edit-pertanyaan.html
@@ -46,7 +46,9 @@
               <form>
                 <div class="content">
                   <h3 class="card-title">Tambah Pertanyaan</h3>
-                  <p class="card-subtitle">Silahkan Tambahkan Pertanyaan</p>
+                  <p class="card-subtitle">
+                    Silahkan Edit Pertanyaan Di bawah ini
+                  </p>
 
                   <div class="question-container mt-4">
                     <div class="form-group">
@@ -54,10 +56,10 @@
                       <textarea
                         class="form-control"
                         id="pertanyaan"
-                        placeholder="Masukan Pertanyaan"
+                        placeholder="Masukan Pertanyaannya"
                         rows="5"
                       >
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad perferendis hic necessitatibus temporibus! Porro laudantium atque voluptatibus voluptatum. Rem molestias soluta dignissimos deserunt culpa dolor? </textarea
+Seberapa puas Anda dengan kualitas pelayanan yang diberikan? </textarea
                       >
                     </div>
                   </div>
