--- a/pages/admin/pertanyaan/kelola-pertanyaan.html
+++ b/pages/admin/pertanyaan/kelola-pertanyaan.html
@@ -46,7 +46,7 @@
               <div class="content">
                 <h3 class="card-title">Daftar Pertanyaan</h3>
                 <p class="card-subtitle">
-                  Silahkan Periksa Pertanyaan Dibawah Ini
+                  Silahkan Periksa Pertanyaan Di bawah Ini
                 </p>
                 <a
                   href="./tambah-pertanyaan.html"
@@ -70,9 +70,8 @@
                         <tr>
                           <th scope="row">1</th>
                           <td class="col-md-10 col-xs-10">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit. Omnis architecto reprehenderit voluptates quos
-                            totam rem aut ab, dignissimos distinctio sed.
+                            Seberapa puas Anda dengan kualitas pelayanan yang
+                            diberikan?
                           </td>
                           <td class="col-md-2 col-xs-2 aksi">
                             <a href="" class="btn btn-delete">Hapus</a>
@@ -86,9 +85,8 @@
                         <tr>
                           <th scope="row">2</th>
                           <td class="col-md-10 col-xs-10">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit. Omnis architecto reprehenderit voluptates quos
-                            totam?
+                            Bagaimana penilaian Anda terhadap kecepatan respons
+                            tim kami dalam menanggapi kebutuhan Anda?
                           </td>
                           <td class="col-md-2 col-xs-2 aksi">
                             <a href="" class="btn btn-delete">Hapus</a>
@@ -102,9 +100,9 @@
                         <tr>
                           <th scope="row">3</th>
                           <td class="col-md-10 col-xs-10">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit. Omnis architecto reprehenderit voluptates quos
-                            totam rem aut ab?
+                            Apakah Anda puas dengan ketersediaan fasilitas,
+                            layanan tambahan, dan peralatan pendukung yang kami
+                            sediakan untuk mendukung pengalaman Anda?
                           </td>
                           <td class="col-md-2 col-xs-2 aksi">
                             <a href="" class="btn btn-delete">Hapus</a>
@@ -118,10 +116,8 @@
                         <tr>
                           <th scope="row">4</th>
                           <td class="col-md-10 col-xs-10">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit. Omnis architecto reprehenderit voluptates quos
-                            totam rem aut ab? Lorem ipsum dolor sit amet
-                            consectetur adipisicing elit. Pariatur, nostrum!?
+                            Apakah Anda puas dengan ketersediaan fasilitas dan
+                            peralatan yang kami sediakan?
                           </td>
                           <td class="col-md-2 col-xs-2 aksi">
                             <a href="" class="btn btn-delete">Hapus</a>
@@ -135,9 +131,9 @@
                         <tr>
                           <th scope="row">5</th>
                           <td class="col-md-10 col-xs-10">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit. Omnis architecto reprehenderit voluptates quos
-                            totam rem aut ab?
+                            Bagaimana penilaian Anda terhadap kecepatan respons
+                            tim kami dalam menanggapi kebutuhan, pertanyaan,
+                            atau keluhan Anda?
                           </td>
                           <td class="col-md-2 col-xs-2 aksi">
                             <a href="" class="btn btn-delete">Hapus</a>
@@ -151,12 +147,9 @@
                         <tr>
                           <th scope="row">6</th>
                           <td class="col-md-10 col-xs-10">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing
-                            elit. Omnis architecto reprehenderit voluptates quos
-                            totam rem aut ab? Lorem ipsum dolor sit amet
-                            consectetur adipisicing elit. Reprehenderit aliquid
-                            eaque dolorum cum accusamus quos laborum, quidem
-                            enim suscipit rem.?
+                            Apakah Anda merasa diperlakukan dengan ramah, sopan,
+                            dan menghargai oleh staf kami selama berinteraksi
+                            dengan layanan atau produk kami?
                           </td>
                           <td class="col-md-2 col-xs-2 aksi">
                             <a href="" class="btn btn-delete">Hapus</a>
