--- a/pages/admin/pertanyaan/tambah-pertanyaan.html
+++ b/pages/admin/pertanyaan/tambah-pertanyaan.html
@@ -54,7 +54,7 @@
                       <textarea
                         class="form-control"
                         id="pertanyaan"
-                        placeholder="Masukan Pertanyaan"
+                        placeholder="Masukan Pertanyaannya"
                         rows="5"
                       ></textarea>
                     </div>
