--- a/pages/kuesioner/biodata.html
+++ b/pages/kuesioner/biodata.html
@@ -74,7 +74,8 @@
                               placeholder="Masukan email anda"
                             />
                             <small id="emailHelp" class="form-text text-muted">
-                              We'll never share your email with anyone else.
+                              Kami tidak akan pernah membagikan email Anda
+                              kepada siapapun.
                             </small>
                           </div>
                         </div>
