--- a/pages/kuesioner/cara-pengisian.html
+++ b/pages/kuesioner/cara-pengisian.html
@@ -53,19 +53,33 @@
               <div class="card-body">
                 <div class="content">
                   <h3 class="card-title">Cara Pengisian Kuosioner</h3>
-                  <p class="card-subtitle">
-                    Untuk Pengisian Kuoisioner bla bla bla
+                  <p class="card-subtitle" style="margin-bottom: 10px">
+                    Untuk Pengisian Kuesioner, silakan ikuti langkah-langkah
+                    berikut ini:
                   </p>
+                  <ol class="mb-5">
+                    <li>Bacalah setiap pertanyaan dengan teliti dan cermat.</li>
+                    <li>
+                      Geser slider ke posisi yang sesuai dengan tingkat kepuasan
+                      atau pendapat Anda, di mana 0 menandakan sangat tidak puas
+                      dan 100 menandakan sangat puas.
+                    </li>
+                    <li>
+                      Pastikan untuk memilih nilai yang mencerminkan pengalaman
+                      atau pendapat Anda secara jujur.
+                    </li>
+                    <li>
+                      Lanjutkan ke langkah berikutnya dengan mengklik tombol
+                      "Lanjutkan".
+                    </li>
+                  </ol>
                   <div class="question-container">
                     <h4 class="question-title">Contoh Pertanyaan :</h4>
                     <div class="question">
                       <div class="question-no">1.</div>
                       <div class="question-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Dolor odit doloremque ducimus fuga nesciunt dicta
-                        necessitatibus dolores dolorum veritatis saepe ipsam,
-                        facere, voluptatibus aut accusamus, reiciendis porro!
-                        Eligendi, illo facilis.?
+                        Bagaimana penilaian Anda terhadap kecepatan respons tim
+                        kami dalam menanggapi kebutuhan Anda?
                       </div>
                     </div>
                     <p class="answer">Jawaban anda : <span>50</span></p>
