--- a/pages/kuesioner/pertanyaan.html
+++ b/pages/kuesioner/pertanyaan.html
@@ -63,11 +63,8 @@
                       <div class="question">
                         <div class="question-no">1.</div>
                         <div class="question-text">
-                          Lorem ipsum dolor sit amet consectetur adipisicing
-                          elit. Dolor odit doloremque ducimus fuga nesciunt
-                          dicta necessitatibus dolores dolorum veritatis saepe
-                          ipsam, facere, voluptatibus aut accusamus, reiciendis
-                          porro! Eligendi, illo facilis.?
+                          Seberapa puas Anda dengan kualitas pelayanan yang
+                          diberikan?
                         </div>
                       </div>
                       <p class="answer">Jawaban anda : <span>50</span></p>
@@ -89,11 +86,8 @@
                       <div class="question">
                         <div class="question-no">2.</div>
                         <div class="question-text">
-                          Lorem ipsum dolor sit amet consectetur adipisicing
-                          elit. Dolor odit doloremque ducimus fuga nesciunt
-                          dicta necessitatibus dolores dolorum veritatis saepe
-                          ipsam, facere, voluptatibus aut accusamus, reiciendis
-                          porro! Eligendi, illo facilis.?
+                          Bagaimana penilaian Anda terhadap kecepatan respons
+                          tim kami dalam menanggapi kebutuhan Anda?
                         </div>
                       </div>
                       <p class="answer">Jawaban anda : <span>50</span></p>
@@ -111,38 +105,14 @@
                       />
                       <br />
                     </div>
-                    <div class="question-container">
-                      <div class="question">
-                        <div class="question-no">2.</div>
-                        <div class="question-text">
-                          Lorem ipsum dolor sit amet consectetur adipisicing
-                          elit. Dolor odit doloremque ducimus fuga nesciunt
-                          dicta necessitatibus dolores dolorum?
-                        </div>
-                      </div>
-                      <p class="answer">Jawaban anda : <span>50</span></p>
-                      <!-- Slider -->
-                      <div class="bantuan">
-                        <span>0</span>
-                        <span>100</span>
-                      </div>
-                      <input
-                        class="answer-question"
-                        type="range"
-                        min="0"
-                        max="100"
-                        step="0"
-                      />
-                      <br />
-                    </div>
+
                     <div class="question-container">
                       <div class="question">
                         <div class="question-no">3.</div>
                         <div class="question-text">
-                          Lorem ipsum dolor sit amet consectetur adipisicing
-                          elit. Dolor odit doloremque ducimus fuga nesciunt
-                          dicta necessitatibus dolores dolorum, reiciendis
-                          porro! Eligendi, illo facilis.?
+                          Apakah Anda puas dengan ketersediaan fasilitas,
+                          layanan tambahan, dan peralatan pendukung yang kami
+                          sediakan untuk mendukung pengalaman Anda?
                         </div>
                       </div>
                       <p class="answer">Jawaban anda : <span>50</span></p>
@@ -164,8 +134,8 @@
                       <div class="question">
                         <div class="question-no">4.</div>
                         <div class="question-text">
-                          Lorem ipsum dolor sit amet reiciendis porro! Eligendi,
-                          illo facilis.?
+                          Apakah Anda puas dengan ketersediaan fasilitas dan
+                          peralatan yang kami sediakan?
                         </div>
                       </div>
                       <p class="answer">Jawaban anda : <span>50</span></p>
@@ -187,10 +157,9 @@
                       <div class="question">
                         <div class="question-no">5.</div>
                         <div class="question-text">
-                          Lorem ipsum dolor sit amet consectetur adipisicing
-                          elit. Dolor odit doloremque veritatis saepe ipsam,
-                          facere, voluptatibus aut accusamus, reiciendis porro!
-                          Eligendi, illo facilis.?
+                          Bagaimana penilaian Anda terhadap kecepatan respons
+                          tim kami dalam menanggapi kebutuhan, pertanyaan, atau
+                          keluhan Anda?
                         </div>
                       </div>
                       <p class="answer">Jawaban anda : <span>50</span></p>
@@ -212,9 +181,9 @@
                       <div class="question">
                         <div class="question-no">6.</div>
                         <div class="question-text">
-                          Lorem ipsum dolor sit amet consectetur adipisicing
-                          elit. Dolor odit doloremque ducimus fuga nesciunt
-                          dicta necessitatibus doloress.?
+                          Apakah Anda merasa diperlakukan dengan ramah, sopan,
+                          dan menghargai oleh staf kami selama berinteraksi
+                          dengan layanan atau produk kami?
                         </div>
                       </div>
                       <p class="answer">Jawaban anda : <span>50</span></p>
