--- a/pages/kuesioner/rangkuman.html
+++ b/pages/kuesioner/rangkuman.html
@@ -61,11 +61,8 @@
                     <div class="question">
                       <div class="question-no">1.</div>
                       <div class="question-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Dolor odit doloremque ducimus fuga nesciunt dicta
-                        necessitatibus dolores dolorum veritatis saepe ipsam,
-                        facere, voluptatibus aut accusamus, reiciendis porro!
-                        Eligendi, illo facilis.?
+                        Seberapa puas Anda dengan kualitas pelayanan yang
+                        diberikan?
                       </div>
                     </div>
                     <p class="answer">Jawaban anda : <span>50</span></p>
@@ -74,22 +71,8 @@
                     <div class="question">
                       <div class="question-no">2.</div>
                       <div class="question-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Dolor odit doloremque ducimus fuga nesciunt dicta
-                        necessitatibus dolores dolorum veritatis saepe ipsam,
-                        facere, voluptatibus aut accusamus, reiciendis porro!
-                        Eligendi, illo facilis.?
-                      </div>
-                    </div>
-                    <p class="answer">Jawaban anda : <span>50</span></p>
-                  </div>
-                  <div class="question-container">
-                    <div class="question">
-                      <div class="question-no">2.</div>
-                      <div class="question-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Dolor odit doloremque ducimus fuga nesciunt dicta
-                        necessitatibus dolores dolorum?
+                        Bagaimana penilaian Anda terhadap kecepatan respons tim
+                        kami dalam menanggapi kebutuhan Anda?
                       </div>
                     </div>
                     <p class="answer">Jawaban anda : <span>50</span></p>
@@ -98,10 +81,9 @@
                     <div class="question">
                       <div class="question-no">3.</div>
                       <div class="question-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Dolor odit doloremque ducimus fuga nesciunt dicta
-                        necessitatibus dolores dolorum, reiciendis porro!
-                        Eligendi, illo facilis.?
+                        Apakah Anda puas dengan ketersediaan fasilitas, layanan
+                        tambahan, dan peralatan pendukung yang kami sediakan
+                        untuk mendukung pengalaman Anda?
                       </div>
                     </div>
                     <p class="answer">Jawaban anda : <span>50</span></p>
@@ -110,8 +92,8 @@
                     <div class="question">
                       <div class="question-no">4.</div>
                       <div class="question-text">
-                        Lorem ipsum dolor sit amet reiciendis porro! Eligendi,
-                        illo facilis.?
+                        Apakah Anda puas dengan ketersediaan fasilitas dan
+                        peralatan yang kami sediakan?
                       </div>
                     </div>
                     <p class="answer">Jawaban anda : <span>50</span></p>
@@ -120,10 +102,9 @@
                     <div class="question">
                       <div class="question-no">5.</div>
                       <div class="question-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Dolor odit doloremque veritatis saepe ipsam, facere,
-                        voluptatibus aut accusamus, reiciendis porro! Eligendi,
-                        illo facilis.?
+                        Bagaimana penilaian Anda terhadap kecepatan respons tim
+                        kami dalam menanggapi kebutuhan, pertanyaan, atau
+                        keluhan Anda?
                       </div>
                     </div>
                     <p class="answer">Jawaban anda : <span>50</span></p>
@@ -132,9 +113,9 @@
                     <div class="question">
                       <div class="question-no">6.</div>
                       <div class="question-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Dolor odit doloremque ducimus fuga nesciunt dicta
-                        necessitatibus doloress.?
+                        Apakah Anda merasa diperlakukan dengan ramah, sopan, dan
+                        menghargai oleh staf kami selama berinteraksi dengan
+                        layanan atau produk kami?
                       </div>
                     </div>
                     <p class="answer">Jawaban anda : <span>50</span></p>
@@ -146,7 +127,7 @@
                     >Kembali</a
                   >
                   <a href="terimakasih.html" class="btn btn-primary" id="next">
-                    Lanjutkan
+                    Selesai
                   </a>
                 </div>
               </div>
