--- a/tentang-kami.html
+++ b/tentang-kami.html
@@ -72,12 +72,14 @@
         <div class="content" data-aos="fade-up">
           <h2 class="title">RSUD AROSUKA</h2>
           <p class="text-content mb-5 col-12 col-lg-8">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem non
-            excepturi obcaecati vitae, et animi dolor molestias blanditiis,
-            omnis iste in rerum velit? <br />
-            Odit nulla perferendis hic, voluptas libero molestiae labore
-            veritatis minus aut. Explicabo nihil illo excepturi dolorem labore
-            commodi, vel soluta placeat adipisci magni et saepe, alias aliquam.
+            RSUD AROSUKA adalah lembaga pelayanan kesehatan yang berkomitmen
+            untuk memberikan layanan terbaik kepada masyarakat sejak didirikan.
+            <br />
+            Kami menyediakan berbagai layanan kesehatan yang mencakup perawatan
+            medis, pelayanan rawat inap, operasi, konsultasi dokter, dan beragam
+            fasilitas penunjang lainnya. Dengan tim medis yang berpengalaman dan
+            fasilitas yang memadai, kami bertekad untuk menjadi mitra terpercaya
+            dalam upaya menjaga kesehatan dan kesejahteraan masyarakat.
           </p>
         </div>
         <div class="card-slider">
