--- a/pages/admin/pengujian.html
+++ b/pages/admin/pengujian.html
@@ -82,7 +82,9 @@
     <main>
       <section id="hero" class="hero section-bg">
         <div class="content" data-aos="fade-up">
-          <h1 class="title">PENILAIAN TINGKAT KEPUASAN PASIEN RSUD AROSUKA</h1>
+          <h1 class="title">
+            KELOLA PERTANYAAN UNTUK MENILAI TINGKAT KEPUASAN PASIEN
+          </h1>
           <a href="./pertanyaan/kelola-pertanyaan.html" class="btn btn-primary"
             >Kelola Pertanyaan</a
           >
