--- a/pages/kuesioner/biodata.html
+++ b/pages/kuesioner/biodata.html
@@ -146,7 +146,12 @@
 
                   <!-- Navigation buttons -->
                   <div class="button">
-                    <button class="btn btn-secondary" id="prev">Kembali</button>
+                    <a
+                      href="../../index.html"
+                      class="btn btn-secondary"
+                      id="prev"
+                      >Kembali</a
+                    >
                     <!-- Lanjutkan button -->
                     <a
                       href="cara-pengisian.html"
