fix bug: change glightbox href & rename slider-answer.js

--- a/login.html
+++ b/login.html
@@ -97,7 +97,11 @@
                 <button type="submit" class="btn btn-primary">Masuk</button>
               </div>
               <div class="col-12 col-lg-8">
-                <a href="#" class="btn btn-link">Lupa Kata Sandi?</a>
+                <a
+                  href="https://wa.me/6285265324128?text=Hello,%20saya%20ingin%20bertanya%20kata%20sandi%20dari%20website%20kuesioner%20RSUD%20Arosuka"
+                  class="btn btn-link"
+                  >Lupa Kata Sandi?</a
+                >
               </div>
             </form>
           </div>
@@ -105,7 +109,7 @@
         <div class="card-slider">
           <a
             class="glightbox"
-            href="/assets/images/background-rs-bundar.png"
+            href="/assets/images/background-rs.png"
             type="image"
             slideEffect="slide"
           >
