--- a/pages/kuesioner/cara-pengisian.html
+++ b/pages/kuesioner/cara-pengisian.html
@@ -97,7 +97,9 @@
                     />
                     <br />
                   </div>
-                  <p class="finish">Jika anda mengerti, silahkan lanjutkan</p>
+                  <p class="finish">
+                    Jika anda sudah mengerti, silahkan lanjutkan
+                  </p>
                 </div>
 
                 <div class="button">
@@ -124,6 +126,6 @@
 
     <script src="../../assets/scripts/main.js"></script>
     <script src="../../assets/scripts/kuesioner.js"></script>
-    <script src="../../assets/scripts/pertanyaan.js"></script>
+    <script src="../../assets/scripts/slider-answer.js"></script>
   </body>
 </html>
