--- a/pages/kuesioner/biodata.html
+++ b/pages/kuesioner/biodata.html
@@ -141,7 +141,7 @@
                         </div>
                       </div>
                     </div>
-                    <p class="finish">Jika anda mengerti, silahkan lanjutkan</p>
+                    <p class="finish">Jika sudah diisi, silahkan lanjutkan</p>
                   </div>
 
                   <!-- Navigation buttons -->
